# cw-arcade

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  config.json.template  exec.sh
.cargo/: config
examples/: schema.rs
schema/: execute_msg.json  instantiate_msg.json  query_msg.json  scoreboard_list_resp.json
src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs  utils.rs
