[package]
name = "cw-arcade"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
cw-storage-plus = "1.0.1"
cosmwasm-std = "1.2.5"
schemars = "0.8.12"
serde = "1.0.163"
thiserror = "1.0.24"
cw-utils = "1.0.1"

[dev-dependencies]
cw-multi-test = "0.16.4"
cosmwasm-schema = "1.2.6"
